--- a/config.toml
+++ b/config.toml
@@ -3,9 +3,29 @@ limit_days = 7
 cache_url = "https://liyongjian2023.github.io/RoboArxiv/cache.json"
 
 [[sources]]
-limit = 150
+limit = 300
 category = "cs.RO"
 title = "Robotics"
+
+[[sources]]
+limit = 300
+category = "cs.CV"
+title = "Computer Vision and Pattern Recognition"
+
+[[sources]]
+limit = 300
+category = "cs.AI"
+title = "Artificial Intelligence"
+
+[[sources]]
+limit = 300
+category = "cs.LG"
+title = "Machine Learning"
+
+[[sources]]
+limit = 300
+category = "cs.GR"
+title = "Graphics"
 
 [scripts]
 highlight_title = "scripts/highlight_title.rhai"
