--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,21 @@ limit = 150
 category = "cs.RO"
 title = "Robotics"
 
+[[sources]]
+limit = 150
+category = "cs.CV"
+title = "Computer Vision and Pattern Recognition"
+
+[[sources]]
+limit = 150
+category = "cs.AI"
+title = "Artificial Intelligence"
+
+[[sources]]
+limit = 150
+category = "cs.LG"
+title = "Machine Learning"
+
 [scripts]
 highlight_title = "scripts/highlight_title.rhai"
 highlight_author = "scripts/highlight_author.rhai"
